SCR-48 AI cannot play anymore